Small fix for final percentage rule